--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,42 +1,20 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<nav class="navbar navbar-expand-lg navbar-inverse bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">PlatziSquare</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" routerLink="/lugares">Inicio<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" routerLink="/contacto">Contacto</a>
             </li>
         </ul>
     </div>
 </nav>
-<agm-map [latitude]="lat" [longitude]="lng">
-    <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
-</agm-map>
-<hr />
-<div class="container">
-    <div class="row">
-        <div class="col-md-8">
-            <h2>Lugares cercanos</h2>
-            <ul class="list-group">
-                <ng-container *ngFor="let lugar of lugares; let i = index" [ngSwitch]="lugar.cercania">
-                    <li class="list-group-item" contar-clicks [ngStyle]="{color: (lugar.active) ? 'black' : 'gray'}" [ngClass]="{numero_par: (i+1) % 2 !== 0}" [resaltar]="lugar.plan">
-                        {{lugar.nombre}} -
-                        <span *ngSwitchCase="1" [ngStyle]="{color: 'green'}">Muy Cercano</span>
-                        <span *ngSwitchCase="2" [ngStyle]="{color: 'black'}">Cercano</span>
-                        <span *ngSwitchCase="3" [ngStyle]="{color: 'red'}">Lejano</span>
-                    </li>
-                </ng-container>
-            </ul>
-        </div>
-        <div class="col-md-4">
-            <h2>Destacados</h2>
-        </div>
-    </div>
-</div>
+
+<router-outlet></router-outlet>
