--- a/src/app/crear/crear.component.html
+++ b/src/app/crear/crear.component.html
@@ -18,6 +18,15 @@
     <input type="text" class="form-control" [(ngModel)]="lugar.plan" />
     <br />
     <h3>Datos de Dirección</h3>
+    <div class="card card-body bg-light">
+        <form>
+            <label>Buscar Negocio en Google</label>
+            <input type="text" class="form-control" [formControl]="searchField" />
+        </form>
+        <ul class="list-group">
+            <li class="list-group-item" *ngFor="let result of results$ | async" (click)="seleccionarDireccion(result)">{{result.formatted_address}}</li>
+        </ul>
+    </div>
     <label>Calle y Número</label>
     <input type="text" class="form-control" [(ngModel)]="lugar.calle" />
     <label>Ciudad</label>
@@ -26,5 +35,5 @@
     <input type="text" class="form-control" [(ngModel)]="lugar.pais" />
     <hr />
     <a class="btn btn-primary" (click)="guardarLugar()">Enviar</a>
-    <a class="btn btn-default" routerLink="/lugares">Cancelar</a>
+    <a class="btn btn-secondary" routerLink="/lugares">Cancelar</a>
 </div>
